# containerprojects

./: .gitignore  README.md
ExpressJsContainer/: compose.ExpressJsWithPostgreSQL.yml  compose.WithMySQL.yml  compose.WithPostgreSQL.yml
ExpressJsContainer/app/: .dockerignore  .gitignore  Containerfile
ExpressJsContainer/app/src/: app.ts
FastAPIContainer/: compose.FastApiPostgreSql.yaml
FastAPIContainer/code/: Containerfile  pyproject.toml
expressjscontainer/ExpressJsContainer/: compose.WithPostgreSQL.yml
expressjscontainer/ExpressJsContainer/app/: Containerfile  package.json
