[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Fastapi-poetry"
version = "0.1.0"
description = "API con FastAPI usando Poetry"
requires-python = ">=3.12"
authors = [
  { name="Manuel Alvarez", email="manu07284alvarez@gmail.com" },
  { name="David Alvarez", email="manu07284alvarez@gmail.com" },
  ]
dependencies = [
  "fastapi[standard]~=0.115.0",
  "sqlmodel~=0.0.24",
  ]

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"


